<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    tools:context=".Login">

    <TextView
        android:text = "@string/experiment"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:text = "@string/name"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <EditText
        android:inputType="textPersonName"
        android:id="@+id/prompt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:text = "@string/password"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />



    <EditText
        android:inputType="textPassword"
        android:id="@+id/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/Login"
        android:text="@string/login"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="loginUser"/>


    <ImageView
        android:contentDescription="@string/app_logo"
        android:src="@drawable/hokerderech"
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
