<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <EditText
        android:text="@string/set_lab_title"
        android:inputType="textShortMessage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:textSize="30dp"
        android:textColor="@color/material_deep_teal_200"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:id="@+id/tmplab_title"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:text="@string/set_lab_description"
        android:layout_below="@id/tmplab_title"
        android:id="@+id/tmplab_desc"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/tmplab_desc"
        android:gravity="center|center_vertical"
        android:text="@string/result_graph"
        android:id="@+id/tmplab_table"/>

    <GridLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:useDefaultMargins="true"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_below="@+id/tmplab_table"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tmpbtn_send"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/set_tableX"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            android:layout_column = "0"
            android:layout_row="0"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"/>

        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/tmptitle_x"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="0dp"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:text="@string/set_tableY"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            android:layout_column = "0"
            android:layout_row="1"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"/>

        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/tmptitle_y"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="0dp"
            android:layout_row="1"
            android:layout_column="1" />
        <TextView
            android:text="@string/set_raw_count"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            android:layout_column = "0"
            android:layout_row="2"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"/>

        <EditText
            android:inputType="textShortMessage"
            android:id="@+id/tmptitle_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="0dp"
            android:layout_row="2"
            android:layout_column="1" />

    </GridLayout>

    <Button
        android:clickable="true"
        android:id="@+id/tmpbtn_send"
        android:paddingTop="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sendme"
        android:contentDescription="@string/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/sendme"
        android:onClick="sendResultsToServer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>