<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <TextView
        android:text="@string/res"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:textSize="40dp"
        android:textColor="@color/material_deep_teal_200"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:id="@+id/lab_title"
        />

    <GridLayout
        android:paddingTop="0dp"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:id="@+id/gridLayout"
        android:useDefaultMargins="true"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_above="@+id/btn_send"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lab_title"
        android:onClick="sendResultsToServer">

        <TextView
            android:text="@string/title1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            android:textSize="20dp"
            android:layout_column = "0"
            android:layout_row="0"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"/>

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/prompt_username"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:text="@string/title2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="0dp"
            android:textSize="20dp"
            android:layout_column = "0"
            android:layout_row="1"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"/>

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/prompt_username2"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_row="2"
            android:layout_column="1" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editText"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_row="2"
            android:layout_column="2" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editText2"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_row="1"
            android:layout_column="1" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editText3"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:text="@string/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:textSize="20dp"
            android:layout_column = "0"
            android:layout_row="2"
            android:textColor="@color/material_deep_teal_200"
            android:textStyle="normal"
            android:typeface="serif"
            android:id="@+id/title3" />


        <EditText
            android:inputType="textPersonName"
            android:id="@+id/prompt_username1"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_row="0"
            android:layout_column="2" />
    </GridLayout>

    <Button
        android:clickable="true"
        android:id="@+id/btn_send"
        android:paddingTop="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sendme"
        android:contentDescription="@string/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/sendme"
        android:layout_alignLeft="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:onClick="sendResultsToServer"/>

    <ImageView
        android:paddingTop="10dp"
        android:src="@drawable/done"
        android:contentDescription="@string/app_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:paddingTop="0dp"
        android:layout_gravity=""
        android:src="@drawable/square"
        android:contentDescription="@string/app_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:paddingTop="0dp"
        android:layout_gravity=""
        android:src="@drawable/square"
        android:contentDescription="@string/app_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <!--<ImageButton-->
    <!--android:image = "@drawable/sendme"-->
    <!--android:id="@+id/btn_send"-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:onClick="sendResultsToServer"-->
    <!--/>-->
    <!-- -->
    <!--<GridLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/gridLayout"-->
    <!--android:useDefaultMargins="true"-->
    <!--android:columnCount="2"-->
    <!--android:rowCount="10">-->
    <!--<TextView-->
    <!--android:name="x"-->
    <!--android:layout_column="0"-->
    <!--android:layout_row="0"-->
    <!--/>-->
    <!--<TextView -->
    <!--&lt;!&ndash;android:name="y"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_column="1"&ndash;&gt;-->
    <!--android:layout_row="0"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:name="x"-->
    <!--android:layout_column="0"-->
    <!--android:layout_row="1"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:name="y"-->
    <!--android:layout_column="1"-->
    <!--android:layout_row="1"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:name="x"-->
    <!--android:layout_column="0"-->
    <!--android:layout_row="2"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:name="y"-->
    <!--android:layout_column="1"-->
    <!--android:layout_row="2"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:name="x"-->
    <!--android:layout_column="0"-->
    <!--android:layout_row="3"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:name="y"-->
    <!--android:layout_column="1"-->
    <!--android:layout_row="3"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:name="x"-->
    <!--android:layout_column="0"-->
    <!--android:layout_row="4"-->
    <!--/>-->
    <!--<TextView-->
    <!--android:name="y"-->
    <!--android:layout_column="1"-->
    <!--android:layout_row="4"-->
    <!--/>-->
    <!--</GridLayout>-->




</RelativeLayout>